# corefx

./: .azure-ci.yml  .azure-perf-ci.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmirrorall  .toolversions  API-Review-Process.md  Branching-Guide.md  Breaking-Change-Definitions.md  Breaking-Change-Rules.md  Breaking-Changes.md  BuildToolsVersion.txt  Building-On-Unix.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code-Coverage.md  CodeAnalysis.ruleset  Coding-style.md  Cross-Platform-Code-Guidelines.md  CustomMarshalers.sln  Developer Guide.md  Developer-Guide.md  Directory.Build.props  Directory.Build.targets  DotnetCLIVersion.txt  FindConflictingProjectConfigurations.ps1  Framework-Design-Guidelines-Digest.md  GenerateBuilds.ps1  ISSUE_TEMPLATE.md  Issue-Guide.md  Issues.md  LICENSE  LICENSE.TXT  LKG_Packages.txt  Microsoft.ServiceModel.Syndication.sln  NuGet.config  OSS-Signing.md  Open-Source-Signing.md  (+87 more)
src/Native/: .clang-format  CMakeLists.txt  build-native.cmd  build-native.proj  build-native.sh  build.sh  config.h.in  configure.cmake  format-code.py  format-code.sh  formatCode.sh  gen-buildsys-clang.sh  native-binplace.proj
src/Native/AnyOS/: brotli-version.txt
src/Native/AnyOS/SleepTestAppNative/: CMakeLists.txt  program.c
src/Native/AnyOS/zlib/: pal_zlib.c  pal_zlib.h
src/Native/Common/: pal_config.h.in  pal_types.h  pal_utilities.cpp  pal_utilities.h
src/Native/System.IO.Compression.Native/: CMakeLists.txt  pal_zlib.cpp  pal_zlib.h
src/Native/System.IO.Native/: CMakeLists.txt  nativeio.cpp  nativeio.h
src/Native/System.Native/: CMakeLists.txt  pal_console.cpp  pal_console.h  pal_errno.cpp  pal_errno.h  pal_exec.cpp  pal_exec.h  pal_interfaceaddresses.cpp  pal_interfaceaddresses.h  pal_io.cpp  pal_io.h  pal_maphardwaretype.cpp  pal_maphardwaretype.h  pal_memory.cpp  pal_memory.h  pal_mount.cpp  pal_mount.h  pal_networkchange.cpp  pal_networkchange.h  pal_networking.cpp  pal_networking.h  pal_networkstatistics.cpp  pal_networkstatistics.h  pal_process.cpp  pal_process.h  pal_runtimeextensions.cpp  pal_runtimeextensions.h  pal_runtimeinformation.cpp  pal_runtimeinformation.h  pal_stat.cpp  pal_stat.h  pal_string.cpp  pal_string.h  pal_tcpstate.cpp  pal_tcpstate.h  pal_time.cpp  pal_time.h  pal_uid.cpp  pal_uid.h  pal_utilities.cpp
src/Native/System.Net.Http.Native/: CMakeLists.txt  pal_curlinit.cpp  pal_curlinit.h  pal_easy.cpp  pal_easy.h  pal_multi.cpp  pal_multi.h  pal_slist.cpp  pal_slist.h  pal_versioninfo.cpp  pal_versioninfo.h
src/Native/System.Net.Ntlm.Native/: CMakeLists.txt  pal_ntlmapi.cpp  pal_ntlmapi.h
src/Native/System.Net.Security.Native/: CMakeLists.txt  pal_gssapi.cpp  pal_gssapi.h  pal_ntlmapi.cpp  pal_ntlmapi.h
src/Native/System.Security.Cryptography.Native/: CMakeLists.txt  configure.cmake  openssl.c  pal_asn1.cpp  pal_asn1.h  pal_asn1_print.cpp  pal_asn1_print.h  pal_bignum.cpp  pal_bignum.h  pal_bio.cpp  pal_bio.h  pal_cms.cpp  pal_cms.h  pal_crypto_config.h.in  pal_crypto_types.h  pal_ecc_import_export.cpp  pal_ecdsa.cpp  pal_ecdsa.h  pal_eckey.cpp  pal_eckey.h  pal_err.cpp  pal_err.h  pal_evp.cpp  pal_evp.h  pal_evp_cipher.cpp  pal_evp_cipher.h  pal_evp_pkey.cpp  pal_evp_pkey.h  pal_evp_pkey_eckey.cpp  pal_evp_pkey_eckey.h  pal_evp_pkey_rsa.cpp  pal_evp_pkey_rsa.h  pal_hmac.cpp  pal_hmac.h  pal_pkcs12.cpp  pal_pkcs12.h  pal_pkcs7.cpp  pal_pkcs7.h  pal_rsa.cpp  pal_rsa.h  (+11 more)
src/Native/Unix/: .clang-format  CMakeLists.txt  configure.cmake  format-code.py  gen-buildsys-clang.sh  gen-buildsys-gcc.sh  verify-so.sh
src/Native/Unix/Common/: pal_compiler.h  pal_config.h.in  pal_safecrt.h  pal_types.h  pal_utilities.h
src/Native/Unix/System.IO.Compression.Native/: CMakeLists.txt  pal_zlib.c  pal_zlib.cpp  pal_zlib.h
src/Native/Unix/System.IO.Ports.Native/: CMakeLists.txt  pal_serial.c  pal_serial.h  pal_termios.c  pal_termios.h
src/Native/Unix/System.Native/: CMakeLists.txt  pal_console.c  pal_console.cpp  pal_console.h  pal_datetime.c  pal_datetime.cpp  pal_datetime.h  pal_dl.cpp  pal_dl.h  pal_errno.c  pal_errno.cpp  pal_errno.h  pal_interfaceaddresses.c  pal_interfaceaddresses.cpp  pal_interfaceaddresses.h  pal_io.c  pal_io.cpp  pal_io.h  pal_maphardwaretype.c  pal_maphardwaretype.h  pal_memory.c  pal_memory.h  pal_mount.c  pal_mount.cpp  pal_mount.h  pal_networkchange.c  pal_networkchange.cpp  pal_networkchange.h  pal_networking.c  pal_networking.cpp  pal_networking.h  pal_networkstatistics.c  pal_networkstatistics.cpp  pal_networkstatistics.h  pal_process.c  pal_process.cpp  pal_process.h  pal_random.c  pal_random.cpp  pal_random.h  (+30 more)
src/Native/Unix/System.Net.Http.Native/: CMakeLists.txt  pal_curlinit.c  pal_curlinit.cpp  pal_curlinit.h  pal_easy.c  pal_easy.cpp  pal_easy.h  pal_multi.c  pal_multi.cpp  pal_multi.h  pal_slist.c  pal_slist.cpp  pal_slist.h  pal_versioninfo.c  pal_versioninfo.cpp  pal_versioninfo.h
src/Native/Unix/System.Net.Security.Native/: CMakeLists.txt  pal_gssapi.c  pal_gssapi.cpp  pal_gssapi.h
src/Native/Unix/System.Security.Cryptography.Native/: CMakeLists.txt  apibridge.c  apibridge.cpp  apibridge.h  apibridge_30.c  apibridge_30.h  apibridge_30_rev.h  configure.cmake  openssl.c  openssl.cpp  openssl.h  (+83 more)
src/Native/Unix/System.Security.Cryptography.Native.Apple/: CMakeLists.txt  pal_digest.c  pal_digest.cpp  pal_digest.h  pal_ecc.c  pal_ecc.cpp  pal_ecc.h  pal_error.h  pal_hmac.c  pal_hmac.cpp  pal_hmac.h  pal_keyagree.c  pal_keyagree.cpp  pal_keyagree.h  pal_keychain.c  pal_keychain.cpp  pal_keychain.h  pal_random.c  pal_random.cpp  pal_random.h  pal_rsa.c  pal_rsa.cpp  pal_rsa.h  pal_sec.c  pal_sec.cpp  pal_sec.h  pal_secimportexport.cpp  pal_secimportexport.h  pal_seckey.c  pal_seckey.cpp  pal_seckey.h  pal_signverify.c  pal_signverify.cpp  pal_signverify.h  pal_ssl.c  pal_ssl.cpp  pal_ssl.h  pal_symmetric.c  pal_symmetric.cpp  pal_symmetric.h  (+9 more)
src/Native/Windows/: CMakeLists.txt  build-native.cmd  gen-buildsys-win.bat  gen-buildsys-win.bat.orig  probe-win.ps1  windows-compiler-override.txt
src/Native/pkg/: Directory.Build.props  Directory.Build.targets  dir.props  dir.targets
(+35688 files in other folders)
